--- a/06-side-projects/040-svn.rst
+++ b/06-side-projects/040-svn.rst
@@ -1,44 +1,127 @@
 用SVN操作GitHub
 =================
-2008年4月1日，GitHub宣布推出基于SVN的SVNHub网站，后证实这是一个愚人节玩笑 [#]_ 。2010年愚人节，类似消息再起，可这一次不再是玩笑 [#]_ 。即对于GitHub上的每一个Git版本库，现在都可以用SVN命令进行操作。
+2008年4月1日，GitHub宣布推出基于SVN的SVNHub网站，后证实这是一个愚人节玩笑 [#]_ 。2010年愚人节，类似消息再起，可这一次不再是玩笑 [#]_ 。即对于GitHub上的每一个Git版本库，现在都可以用SVN命令进行操作。更酷的是 SVN 版本库使用的是和 Git 版本库同样的地址。
 
-例如对于本书的Git版本库可以用如下的SVN命令检出。
+例如用下面的 Git 命令访问本书的 Git 版本库，服务器显示版本库包含的引用。
 
 ::
 
-  $ svn checkout http://svn.github.com/gotgit/gotgithub
-  $ cd gotgithub
+  $ git ls-remote https://github.com/gotgit/gotgithub
+  c4d370b1b0bafb103de14e104ca18b8c31d80add        HEAD
+  ce5d3dda9b9ce8ec90def1da10181a094bea152f        refs/heads/gh-pages
+  c4d370b1b0bafb103de14e104ca18b8c31d80add        refs/heads/master
 
-还支持用SVN进行提交，进而修改Git版本库。
+如果使用 SVN 命令访问相同的版本库地址，服务器变身为一个 SVN 服务器，将 Git 的引用对应为 SVN 风格的分支。如下：
 
-* 用SVN查看修订状态。
+::
+
+  $ svn ls https://github.com/gotgit/gotgithub
+  branches/
+  trunk/
+  $ svn ls https://github.com/gotgit/gotgithub/branches
+  gh-pages/
+
+SVN 支持部分检出，下面命令将整个主线 ``/trunk`` 即 Git 版本库的 ``master`` 分支检出。
+
+::
+
+  $ svn checkout https://github.com/gotgit/gotgithub/trunk gotgithub
+  A    gotgithub/Makefile
+  A    gotgithub/README.rst
+  ...
+  A    gotgithub/images/work-with-others/wiki-reverted.png
+  A    gotgithub/images/work-with-others/wiki-reverted.xcf
+  Checked out revision 30.
+
+还可以使用 SVN 创建分支，即相当为 Git 版本库创建了新的引用。测试发现 GitHub 尚不支持 SVN 远程拷贝创建分支，需要本地拷贝再提交。操作如下：
+
+1. 为避免检出版本库所有分支过于耗时，在检出时使用 ``--depth`` 参数。
+
+   ::
+
+     $ svn checkout --depth=empty https://github.com/gotgit/gotgithub gotgithub-branches
+     Checked out revision 30.
+
+2. 进入到检出目录中，更新出 ``trunk`` 和 ``branches`` 两个顶级目录。
+
+   ::
+
+     $ cd gotgithub-branches
+     $ svn up --depth=empty trunk branches
+     A    trunk
+     Updated to revision 30.
+     A    branches
+     Updated to revision 30.
+
+3. 通过拷贝从 ``trunk`` 创建分支 ``branches/svn-github`` 。
 
   ::
 
-    $ svn status
-    M       06-side-projects/040-svn.rst
+    $ svn cp trunk branches/svn-github
+    A         branches/svn-github
+    $ svn st
+    A  +    branches/svn-github
 
-* 用SVN向Git版本库提交。提交时要输入认证信息，本例以gotgithub账号进行认证。
+4. 提交完成分支创建。
 
   ::
 
-    $ svn commit -m "6.4 svn.github initial."
-    Authentication realm: <http://svn.github.com:80> GitHub
+    $ svn ci -m "create branch svn-github from trunk"
+    Authentication realm: <https://github.com:443> GitHub
     Username: gotgithub
     Password for 'gotgithub':
-    Sending        06-side-projects/040-svn.rst
-    Transmitting file data .
-    Committed revision 24.
+    Adding         branches/svn-github
+    
+    Committed revision 31.
 
-GitHub提供的SVN支持和标准SVN服务还有很多不同，存在一定局限性，如果真的要把Git抛到一边完全使用SVN操作GitHub上的版本库，可能要失望。
+5. 用 Git 命令查看服务器上创建了一个同名的新引用，并且指向和 ``master`` 一致。
 
-* 不能用SVN向版本库中添加新目录，只能在现有目录结构下添加新文件。
-* 命令 ``svn ls`` 的输出不能显示目录树结构，同理也不能用TortoiseSVN远程浏览版本库。
-* 不能按照目录检出，即使执行 ``svn checkout`` 命令时指向版本库的某一个目录，也会检出整个版本库。
-* 执行 ``svn commit`` 命令提交时，如果版本库已被更新，会尝试自动合并，若合并成功提交亦会成功，这和SVN标准行为不同。
-* 不支持SVN的分支和里程碑。即没有SVN的三个约定俗成顶级目录 `/trunk` 、 `/tags` 和 `/branches` ，SVN版本库仅和Git版本库中默认的 `master` 分支对应。
+  ::
 
-虽然如此，在没有安装Git但安装了SVN的环境下，GitHub的这一功能还是有帮助的，可以让用户访问版本库。
+    $ git ls-remote --heads https://github.com/gotgit/gotgithub
+    ce5d3dda9b9ce8ec90def1da10181a094bea152f        refs/heads/gh-pages
+    c4d370b1b0bafb103de14e104ca18b8c31d80add        refs/heads/master
+    c4d370b1b0bafb103de14e104ca18b8c31d80add        refs/heads/svn-github
+
+下面尝试一下用 SVN 命令在新创建的分支 ``svn-github`` 中提交。
+
+1. 进入到之前检出完整主线 ``trunk`` 的 ``gotgithub`` 目录，并将工作区切换为分支 ``branches/svn-github`` 。
+
+   ::
+
+     $ cd ../gotgithub
+     $ svn switch https://github.com/gotgit/gotgithub/branches/svn-github
+     At revision 31.
+
+2. 修改文件，查看工作区状态。
+
+   ::
+
+     $ svn st
+     M       06-side-projects/040-svn.rst
+
+3. 用 SVN 提交。
+
+   ::
+
+     $ svn ci -m "GitHub svn client support improved. Refs: http://git.io/svn"
+     Authentication realm: <https://github.com:443> GitHub
+     Username: gotgithub
+     Password for 'gotgithub':
+     Sending        06-side-projects/040-svn.rst
+     Transmitting file data .
+     Committed revision 32.
+
+4. 同样查看 Git 版本库的更新，会发现 ``svn-github`` 分支的指向已和 ``master`` 不同。
+
+  ::
+
+    $ git ls-remote --heads https://github.com/gotgit/gotgithub
+    ce5d3dda9b9ce8ec90def1da10181a094bea152f        refs/heads/gh-pages
+    c4d370b1b0bafb103de14e104ca18b8c31d80add        refs/heads/master
+    ????????????????????????????????????????        refs/heads/svn-github
+
+如果曾经有人对 GitHub 只提供唯一的版本库格式（Git）托管表示过怀疑的话，那么今天看到 GitHub 对其他版本控制工具提供的愈发完善的支持，争议应该烟消云散了吧。
 
 ----
 
